--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ subjects:
 - !lcsh 'Time travel -- Fiction'
 - !lcsh 'Science fiction'
 - !lcsh 'Short stories'
+- GITenberg
 title: The Ordeal of Colonel Johns
 url: http://www.gutenberg.org/ebooks/32688
